modules/gdscript/tests/scripts/analyzer/errors/getter_no_return.gd
var y:
	get:
		pass

func test():
	print("Not all code paths in the getter function return a value.")
